# projects

2048/: 2048.py  2048foru.py  2048training.py
RSAPOC/: .gitignore  README.md  crack.nim  decrypt.nim  encrypt.nim  generateRSAKeysInsteadOfEnglish.nim
code-claude/: go.mod  main.go  sillybody.json  tokens.go
connect-4/: Cargo.toml
connect-4/src/: main.rs
hadlySideQuest/: app.py  message.txt  shell.nix
hadlySideQuest/static/: regex.js
hadlySideQuest/templates/: imessage.html
kanoodle/: kanoodle.py
klotski/: betterSolution.txt  graph.pkl  graphKlotski.py  solution.txt  solveKlotski.py
ledmatrix/: go.mod  go.sum  main.go
ledmatrix/cli/: cli  main.go
ledmatrix/daemon/: battery.go  critical.go  (+7 more)
linkedlists-in-C/: linkedlist.c
message-graph/: avante.md  go.mod  index.html  main.go  script.js  styles.css
selenium-playground/: mapFast.py  monkeType.py
signal-tui/: .gitignore  Cargo.toml  log.txt  plzwork.db3
signal-tui/src/: actual_main.rs  dead_code.rs  logger.rs  main.rs  multi_line_string.rs  mysignal.rs  signal.rs  testing.rs  tests.rs  thisWorks.rs  update.rs
signal-tui/src/model/: multi_line_string.rs
sporkTracker/: '  .gitignore  README.md  backup.md  badData.md  bun.lockb  data.md  everything.txt  findParticipants.js  id.txt  lessManual.py  manualBackup.py  manualIntervention.md  otherTest.js  package.json  parseData.py  print.txt  rawParse.py  testing.js  ugh.txt
unoNoMercy/: go.mod  logic.go  main.go  testing.go  uno
webGames/: auth.go  data.db  database.go  errorCodes.go  go.mod  go.sum  initDB.go  jwt.go  main.go  testing.go
(+17 files in other folders)
