[package]
name = "signal-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.5"
crossterm = {version = "0.29.0", features = ["event-stream"]}
futures = "0.3.31"
image = "0.25.8"
ratatui = "0.29.0"
ratatui-image = "8.0.2"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"]}
